[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://src/dungeon/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/monsters/misc/shadow.png" type="Texture" id=3]
[ext_resource path="res://src/dungeon/overlap/EnemieArea.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle_down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "run_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "run_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreasureAreaPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=13]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 494, 125 )
states/run/node = SubResource( 18 )
states/run/position = Vector2( 664, 125 )
transitions = [ "idle", "run", SubResource( 19 ), "run", "idle", SubResource( 20 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CapsuleShape2D" id=23]
radius = 7.47495
height = 12.5467

[sub_resource type="CapsuleShape2D" id=24]
radius = 13.2726
height = 10.4515

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 15.5823, 7.23326 )

[node name="Tank" type="KinematicBody2D"]
position = Vector2( 0.581146, -6.39248 )
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/idle_down = SubResource( 1 )
anims/idle_left = SubResource( 2 )
anims/idle_right = SubResource( 3 )
anims/idle_up = SubResource( 4 )
anims/run_down = SubResource( 5 )
anims/run_left = SubResource( 6 )
anims/run_right = SubResource( 7 )
anims/run_up = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 22 )
parameters/idle/blend_position = Vector2( -0.99844, -0.0190752 )
parameters/run/blend_position = Vector2( -0.0920437, -0.0431035 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -0.781744, 10.2875 )
scale = Vector2( 0.110042, 0.207942 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.913216, -4.35844 )
texture = ExtResource( 1 )
vframes = 5
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.34212, -3.84654 )
shape = SubResource( 23 )

[node name="EnemieArea" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="EnemieArea" index="0"]
position = Vector2( 0.553457, 2.76731 )
rotation = 1.5708
shape = SubResource( 24 )

[node name="TreasureAreaPivot" type="Position2D" parent="."]
visible = false
position = Vector2( -1.10693, -18.2642 )
rotation = 6.28319

[node name="TreasureArea" parent="TreasureAreaPivot" instance=ExtResource( 4 )]
position = Vector2( 3.01003e-06, 17.0882 )
collision_mask = 16

[node name="CollisionShape2D" parent="TreasureAreaPivot/TreasureArea" index="0"]
position = Vector2( -16.5146, -0.249096 )
shape = SubResource( 25 )
[connection signal="body_entered" from="EnemieArea" to="." method="_on_EnemieArea_body_entered"]
[connection signal="body_entered" from="TreasureAreaPivot/TreasureArea" to="." method="_on_treasure_seen"]
[connection signal="body_exited" from="TreasureAreaPivot/TreasureArea" to="." method="_on_treasure_unseen"]

[editable path="EnemieArea"]

[editable path="TreasureAreaPivot/TreasureArea"]
